<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        android:enabled="true" />
    
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar"
        android:enabled="true" />
    
    <item
        android:id="@+id/nav_paths"
        android:icon="@drawable/ic_target"
        android:title="@string/nav_paths"
        android:enabled="true" />
    
    <item
        android:id="@+id/nav_knowledge"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_knowledge"
        android:enabled="true" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"
        android:enabled="true" />
</menu>

